--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Test-page</title>
-</head>
-<body>Here, you would see things.</body>
+  <head>
+    <title>Indrajala</title>
+  </head>
+  <li>
+    <a href="admin/index.html">Indrajala Administrator</a>
+  </li>
 </html>
