--- a/js_indrajala/index.html
+++ b/js_indrajala/index.html
@@ -4,6 +4,6 @@
     <title>Indrajala</title>
   </head>
   <li>
-    <a href="admin/index.html">Indrajala Administrator</a>
+    <a href="admin/index.html">Indrajāla Administrator</a>
   </li>
 </html>
