--- a/js_indrajala/index.html
+++ b/js_indrajala/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Indrajala</title>
-  </head>
-  <li>
-    <a href="admin/index.html">Indrajāla Administrator</a>
-  </li>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Indrajāla Main</title>
+</head>
+<body>
+  <!-- Include the browser.js script -->
+  <script type="module" src="scripts/indra_main.js"></script>
+</body>
 </html>
